minor FOUC fixes, still jumping

--- a/_sass/_bootstrap_customization.scss
+++ b/_sass/_bootstrap_customization.scss
@@ -7,7 +7,6 @@
 // Flatly 4.3.1
 // Bootswatch
 
-
 // Variables ===================================================================
 
 //$web-font-path: "https://fonts.googleapis.com/css?family=Lato:400,700,400italic" !default;
@@ -29,8 +28,14 @@
     color: $gray-700;
 }
 
-.lightSlider h4 {
-    text-decoration: underline;
+//.lightSlider h4 {
+//    text-decoration: underline;
+//}
+
+.html {
+    position: fixed; 
+    overflow-y: scroll;
+    width: 100%;
 }
 
 
